--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	},
 	"homepage": "https://github.com/portothree/vow#readme",
 	"devDependencies": {
+		"@babel/core": "^7.11.6",
+		"@babel/preset-env": "^7.11.5",
+		"babel-jest": "^26.5.2",
 		"jest": "^26.5.2"
 	}
 }
